<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">
    <ScrollView android:id="@+id/ScrollViewID"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="Sport Name"
                android:textSize="10pt"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="name of your activity"
                android:textSize="0pt" />


            <Spinner
                android:id="@+id/sports_dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >

            </Spinner>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_start_time"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:hint="hr/min"
                    android:textSize="11pt" />

                <Button
                    android:id="@+id/show_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="Start Time"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_end_time"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:hint="hr/min"
                    android:textSize="11pt"  />

                <Button
                    android:id="@+id/show_time_picker_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="End Time"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/activity_date"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:hint="mm/dd/yyyy"
                    android:textSize="11pt"  />
                <Button
                    android:id="@+id/show_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Date"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.widget.TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-30dp"
                    android:layout_marginBottom="-30dp"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:timePickerMode="spinner"
                    android:visibility="visible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/timer_confirm_btn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="ok" />

                    <Button
                        android:id="@+id/timer_cancel_btn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:text="cancel" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <DatePicker
                    android:id="@+id/date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-50dp"
                    android:layout_marginBottom="-80dp"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:visibility="visible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/date_confirm_btn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="ok" />

                    <Button
                        android:id="@+id/date_cancel_btn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:text="cancel" />
                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/upload_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="submit"
                    android:textColor="#3a85ff"
                    android:background="#ffffff"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/cancel_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cancel"
                    android:textColor="#000000"
                    android:background="#ffffff"
                    android:layout_alignParentEnd="true"
                    android:textSize="14sp"
                    />

            </RelativeLayout>




        </LinearLayout>
    </ScrollView>
</LinearLayout>